--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 * @link https://coreui.io/vue/
 * Copyright (c) 2020 creativeLabs Łukasz Holeczek
 -->
-<html>
+<html dir="rtl">
 
 <head>
     <meta charset="utf-8">
